--- a/recursos/style.css
+++ b/recursos/style.css
@@ -1,3 +1,65 @@
+html, body {
+  min-width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
+.head {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.head .slide {
+  background-color: whitesmoke;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 1s ease;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.head .slide .head-titulos {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+.head .slide .head-titulos .texto-primario, .head .slide .head-titulos .texto-secundario {
+  color: black;
+  padding-left: 10%;
+  margin: 0;
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: all 1.5s ease;
+}
+.head .slide .head-titulos .texto-primario {
+  font-weight: 700;
+  margin-bottom: 0.8rem;
+  transition-delay: 0.3s;
+}
+.head .slide .head-titulos .texto-secundario {
+  font-size: 1rem;
+  transition-delay: 0.6s;
+}
+.head .slide .head-titulos .t-ativo {
+  opacity: 1;
+  transform: translateX(0);
+}
+.head .slide .banner {
+  max-width: 40%;
+  min-height: 100%;
+}
+.head .ativo {
+  display: flex;
+  opacity: 1;
+  transition-delay: 1.2s;
+}
 
 /*# sourceMappingURL=style.css.map */
