--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -59,7 +59,7 @@ html, body{
         
         .banner{
             max-width: 40%;
-            min-height: 100%;
+            max-height: 80vh;
         }
     }
 
