--- a/recursos/style.css
+++ b/recursos/style.css
@@ -6,6 +6,26 @@ html, body {
   overflow-x: hidden;
 }
 
+.icon-container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  z-index: 3;
+  margin: 0.5rem 0 0 50%;
+  transform: translateX(-50%);
+}
+.icon-container .icon-logo {
+  width: 1.5rem;
+  object-fit: contain;
+  margin: 0;
+}
+.icon-container .icon-nome {
+  width: 10rem;
+  object-fit: contain;
+  margin: 0;
+}
+
 .head {
   display: grid;
   grid-template-areas: "pilha";
@@ -14,16 +34,29 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+  background: linear-gradient(0deg, #2749a5, #1d3474);
+}
+.head .slide-fixo {
+  grid-area: pilha;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: white;
+  clip-path: polygon(0 0, 100% 0, 100% 92%, 55% 92%, 45% 100%, 0 100%);
 }
 .head .slide {
   grid-area: pilha;
-  background-color: whitesmoke;
   width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 2rem;
   opacity: 0;
   transition: opacity 1s ease;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+  visibility: hidden;
+  position: relative;
+  background-color: whitesmoke;
+  clip-path: polygon(0 0, 100% 0, 100% 92%, 55% 92%, 45% 100%, 0 100%);
 }
 .head .slide .head-titulos {
   width: 60%;
@@ -43,14 +76,15 @@ html, body {
 .head .slide .head-titulos .texto-primario {
   font-weight: 700;
   margin-bottom: 0.8rem;
-  transition-delay: 0.3s;
+  transition-delay: 0.2s;
 }
 .head .slide .head-titulos .texto-secundario {
   font-size: 0.7rem;
-  transition-delay: 0.5s;
+  transition-delay: 0.4s;
 }
 .head .slide .head-titulos .texto-invertido {
   transform: translateX(100px);
+  padding-left: 0;
 }
 .head .slide .head-titulos .t-ativo {
   opacity: 1;
@@ -59,11 +93,13 @@ html, body {
 .head .slide .banner {
   max-width: 40%;
   max-height: 80vh;
+  transition: all 1.5s ease;
 }
 .head .ativo {
-  display: flex;
   opacity: 1;
   transition-delay: 1.2s;
+  visibility: visible;
+  display: flex;
 }
 
 .consultas {
@@ -72,7 +108,7 @@ html, body {
   padding: 2rem 0 3rem 0;
   color: white;
   transform: translateY(-1px);
-  background: linear-gradient(120deg, #2749a5, #9db7ff);
+  background: linear-gradient(180deg, #2749a5, #1d3474);
 }
 .consultas .title {
   text-align: center;
