--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -6,6 +6,27 @@ html, body{
     overflow-x: hidden;
 }
 
+.icon-container{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    z-index: 3;
+    margin: .5rem 0 0 50%;
+    transform: translateX(-50%);
+    
+    .icon-logo{
+        width: 1.5rem;
+        object-fit: contain;
+        margin: 0;
+    }
+    .icon-nome{
+        width: 10rem;
+        object-fit: contain;
+        margin: 0;
+    }
+}
+
 .head{
     display: grid;
     grid-template-areas: "pilha";
@@ -14,17 +35,31 @@ html, body{
     width: 100%;
     margin: 0;
     padding: 0;
+    background: linear-gradient(0deg, #2749a5, #1d3474);
+
+    .slide-fixo{
+        grid-area: pilha;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        background-color: white;
+        clip-path: polygon(0 0, 100% 0, 100% 92%, 55% 92%, 45% 100%, 0 100%);
+    }
     
     .slide{
         grid-area: pilha;
-        background-color: whitesmoke;
         width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        padding-top: 2rem;
         opacity: 0;
         transition: opacity 1s ease;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        
+        visibility: hidden;
+        position: relative;
+        background-color: whitesmoke;
+        clip-path: polygon(0 0, 100% 0, 100% 92%, 55% 92%, 45% 100%, 0 100%);
+
         .head-titulos{
             width: 60%;
             height: 100%;
@@ -44,16 +79,17 @@ html, body{
             .texto-primario{
                 font-weight: 700;
                 margin-bottom: .8rem;
-                transition-delay: .3s;
+                transition-delay: .2s;
             }
 
             .texto-secundario{
                 font-size: .7rem;
-                transition-delay: .5s;
+                transition-delay: .4s;
             }
 
             .texto-invertido{
                 transform: translateX(100px);
+                padding-left: 0;
             }
             
             .t-ativo{
@@ -65,13 +101,15 @@ html, body{
         .banner{
             max-width: 40%;
             max-height: 80vh;
+            transition: all 1.5s ease;
         }
     }
 
     .ativo{
-        display: flex;
         opacity: 1;
         transition-delay: 1.2s;
+        visibility: visible;
+        display: flex;
     }
 }
 
@@ -81,7 +119,7 @@ html, body{
     padding: 2rem 0 3rem 0;
     color: white;
     transform: translateY(-1px);
-    background: linear-gradient(120deg, #2749a5, #9db7ff);
+    background: linear-gradient(180deg, #2749a5, #1d3474);
 
     .title{
         text-align: center;
