--- a/recursos/style.css
+++ b/recursos/style.css
@@ -35,6 +35,15 @@ html, body {
   margin: 0;
   padding: 0;
   background: linear-gradient(0deg, #2749a5, #1d3474);
+  /*
+  .right{
+      clip-path: polygon(0 0, 100% 0, 100% 92%, 55% 92%, 45% 100%, 0 100%);
+  }
+
+  .left{
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 55% 100%, 45% 92%, 0 92%);
+  }
+  */
 }
 .head .slide-fixo {
   grid-area: pilha;
@@ -67,7 +76,7 @@ html, body {
 }
 .head .slide .head-titulos .texto-primario, .head .slide .head-titulos .texto-secundario {
   color: black;
-  padding-left: 10%;
+  padding-left: 8%;
   margin: 0;
   opacity: 0;
   transform: translateX(-100px);
@@ -85,6 +94,7 @@ html, body {
 .head .slide .head-titulos .texto-invertido {
   transform: translateX(100px);
   padding-left: 0;
+  padding-right: 8%;
 }
 .head .slide .head-titulos .t-ativo {
   opacity: 1;
