--- a/recursos/style.css
+++ b/recursos/style.css
@@ -30,20 +30,10 @@ html, body {
   display: grid;
   grid-template-areas: "pilha";
   align-items: center;
-  justify-content: center;
   width: 100%;
   margin: 0;
   padding: 0;
-  background: linear-gradient(0deg, #2749a5, #1d3474);
-  /*
-  .right{
-      clip-path: polygon(0 0, 100% 0, 100% 92%, 55% 92%, 45% 100%, 0 100%);
-  }
-
-  .left{
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 55% 100%, 45% 92%, 0 92%);
-  }
-  */
+  background: linear-gradient(0deg, #1d3474, #061a50);
 }
 .head .slide-fixo {
   grid-area: pilha;
@@ -118,7 +108,8 @@ html, body {
   padding: 2rem 0 3rem 0;
   color: white;
   transform: translateY(-1px);
-  background: linear-gradient(180deg, #2749a5, #1d3474);
+  background: linear-gradient(180deg, #1d3474, #061a50);
+  text-align: center;
 }
 .consultas .title {
   text-align: center;
@@ -130,13 +121,22 @@ html, body {
   font-size: 1.2rem;
   margin: 0;
 }
-.consultas .links-container {
+.consultas .topic {
+  margin: 2.5rem 0 1.2rem 0;
+  font-size: 1.5rem;
+}
+.consultas .planos-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0;
+}
+.consultas .modelos-container {
   display: flex;
   justify-content: space-evenly;
   margin: 2rem 10%;
   gap: 2rem;
 }
-.consultas .links-container .link {
+.consultas .modelos-container .modelos {
   display: flex;
   flex-direction: column;
   justify-content: center;
