--- a/recursos/style.css
+++ b/recursos/style.css
@@ -105,6 +105,8 @@ html, body {
 .consultas {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 2rem 0 3rem 0;
   color: white;
   transform: translateY(-1px);
@@ -122,13 +124,37 @@ html, body {
   margin: 0;
 }
 .consultas .topic {
-  margin: 2.5rem 0 1.2rem 0;
+  margin: 2.5rem 0 2rem 0;
   font-size: 1.5rem;
 }
 .consultas .planos-container {
   display: flex;
   justify-content: space-evenly;
   margin: 0;
+  max-width: 50rem;
+  width: 90%;
+  height: max-content;
+}
+.consultas .planos-container .plano-container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: start;
+  padding: 0;
+}
+.consultas .planos-container .plano-container .plano-titulo {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 0;
+}
+.consultas .planos-container .plano-container .plano-lista {
+  text-align: start;
+  padding: 0;
+}
+.consultas .planos-container .plano-linha {
+  width: 2px;
+  height: auto;
+  background-color: white;
 }
 .consultas .modelos-container {
   display: flex;
