--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -116,6 +116,8 @@ html, body{
 .consultas{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 2rem 0 3rem 0;
     color: white;
     transform: translateY(-1px);
@@ -135,7 +137,7 @@ html, body{
     }
 
     .topic{
-        margin: 2.5rem 0 1.2rem 0;
+        margin: 2.5rem 0 2rem 0;
         font-size: 1.5rem;
     }
 
@@ -143,8 +145,34 @@ html, body{
         display: flex;
         justify-content: space-evenly;
         margin: 0;
+        max-width: 50rem;
+        width: 90%;
+        height: max-content;
         
-        
+        .plano-container {
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            justify-content: start;
+            padding: 0;
+
+            .plano-titulo{
+                text-align: center;
+                font-size: 1.5rem;
+                margin: 0;
+            }
+
+            .plano-lista{
+                text-align: start;
+                padding: 0;
+            }
+        }
+
+        .plano-linha{
+            width: 2px;
+            height: auto;
+            background-color: white;
+        }
     }
 
     .modelos-container{
