--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -125,15 +125,17 @@ html, body{
     text-align: center;
 
     .title {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
         margin: 0 0 .5rem 0;
         font-weight: 700;
     }
     
     .subtitle {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
+        font-weight: 600;
         opacity: 0.8;
         margin-bottom: 3rem;
+        max-width: 90%;
     }
 
     .topic {
@@ -150,8 +152,7 @@ html, body{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 2rem;
-        max-width: 60rem;
+        max-width: 55rem;
         width: 100%;
         margin-bottom: 2rem;
         
@@ -247,4 +248,36 @@ html, body{
             }
         }
     }
+
+    .oculto-container {
+        display: flex;
+        max-width: 90%;
+        
+        .etapas-container{
+            display: none;
+            margin: 2rem 0;
+            max-width: 90%;
+        }
+
+        .localizacao-container{
+            display: none;
+            width: 100%;
+            max-width: 1200px;
+            margin: 2rem 0;
+            border-radius: 1rem;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            
+            .mapa-google{
+                display: block;
+                width: 100%;
+                height: 300px;
+            }
+        }
+        
+        .ativo{
+            display: flex;
+        }
+    }
+    
 }
