--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -251,18 +251,76 @@ html, body{
 
     .oculto-container {
         display: flex;
-        max-width: 90%;
+        justify-content: center;
+        width: 100%;
+        padding: 0;
+        margin: 0;
         
-        .etapas-container{
+        .etapas-container {
             display: none;
-            margin: 2rem 0;
-            max-width: 90%;
+            flex-direction: column;
+            align-items: center;
+            gap: 1.8rem;
+            width: 100%;
+            max-width: 800px;
+
+            .etapa {
+                width: 90%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+                border: #e0e0e0 1px solid;
+                border-radius: 1rem;
+                padding-top: 1rem;
+
+                .etapa-texto{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+                    width: 90%;
+
+                    .etapa-header {
+                        display: flex;
+                        align-items: baseline;
+                        gap: 8px;
+    
+                        .numero {
+                            font-size: 1.6rem;
+                            font-weight: 800;
+                            color: #ffcc00;
+                            opacity: 0.8;
+                            line-height: 1;
+                        }
+    
+                        .titulo {
+                            font-size: 1.6rem;
+                            color: #fff;
+                            margin: 0;
+                            font-weight: 700;
+                        }
+                    }
+    
+                    .descricao {
+                        font-size: 1rem;
+                        color: #eee;
+                        text-align: justify;
+                        line-height: 1.4;
+                        margin: 0;
+                    }
+                }
+
+                .etapa-img {
+                    height: 250px;
+                    object-fit: cover;
+                    margin-top: 0.5rem;
+                }
+            }
         }
 
         .localizacao-container{
             display: none;
-            width: 100%;
-            max-width: 1200px;
+            width: 90%;
             margin: 2rem 0;
             border-radius: 1rem;
             overflow: hidden;
@@ -341,7 +399,6 @@ html, body{
             align-items: center;
         }
     }
-    
 }
 
 .agendamento {
@@ -563,9 +620,14 @@ html, body{
     }
 }
 
-/* Responsividade simples */
 @media (max-width: 768px) {
     .rodape-bottom {
         flex-direction: column;
+    }
+}
+
+@media (min-width: 768px) {   
+    .etapa-1{
+        flex-direction: row;
     }
 }
