--- a/pdf/style.scss
+++ b/pdf/style.scss
@@ -148,20 +148,20 @@ Cores atuais:
     }
 
     .topic {
-        max-width: 90%;
+        max-width: 100%;
         margin: 2rem 0 1rem 0;
         font-size: 1.4rem;
         text-transform: uppercase;
         letter-spacing: 2px;
         font-weight: 600;
         opacity: 0.9;
+        text-align: center;
     }
 
     .planos-container {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        max-width: 55rem;
         width: 100%;
         margin-bottom: 1.4rem;
         
@@ -209,7 +209,9 @@ Cores atuais:
 
     .modelos-container {
         display: flex;
-        gap: 2rem;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         padding-top: 1rem;
         margin-bottom: 1.5rem;
 
@@ -223,6 +225,7 @@ Cores atuais:
             padding: 1rem;
             color: white;
             cursor: default;
+            max-width: 8rem;
         }
     }
 
@@ -266,17 +269,15 @@ Cores atuais:
         margin: 0;
         
         .etapas-container {
-            display: none;
+            display: flex;
             flex-direction: column;
             align-items: center;
             gap: 1.8rem;
             width: 100%;
-            max-width: 800px;
 
             .etapa {
-                width: 90%;
+                width: 80%;
                 display: flex;
-                flex-direction: column;
                 align-items: center;
                 gap: 1rem;
                 border: #e0e0e0 1px solid;
@@ -287,7 +288,8 @@ Cores atuais:
                     display: flex;
                     flex-direction: column;
                     gap: 1rem;
-                    width: 90%;
+                    width: 50%;
+                    padding-left: 2rem;
 
                     .etapa-header {
                         display: flex;
@@ -295,7 +297,7 @@ Cores atuais:
                         gap: 8px;
     
                         .numero {
-                            font-size: 1.6rem;
+                            font-size: 2.5rem;
                             font-weight: 800;
                             color: #ffcc00;
                             opacity: 0.8;
@@ -303,7 +305,7 @@ Cores atuais:
                         }
     
                         .titulo {
-                            font-size: 1.6rem;
+                            font-size: 2.2rem;
                             color: #fff;
                             margin: 0;
                             font-weight: 700;
@@ -311,7 +313,7 @@ Cores atuais:
                     }
     
                     .descricao {
-                        font-size: 1rem;
+                        font-size: 1.3rem;
                         color: #eee;
                         text-align: justify;
                         line-height: 1.4;
@@ -320,7 +322,7 @@ Cores atuais:
                 }
 
                 .etapa-img {
-                    height: 250px;
+                    height: 400px;
                     object-fit: cover;
                     margin-top: 0.5rem;
                 }
@@ -328,8 +330,10 @@ Cores atuais:
         }
 
         .localizacao-container{
-            display: none;
-            width: 90%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
             margin: 2rem 0;
             border-radius: 1rem;
             overflow: hidden;
@@ -338,8 +342,9 @@ Cores atuais:
             
             .mapa-google{
                 display: block;
-                width: 100%;
+                width: 60%;
                 height: 300px;
+                border-radius: 1rem;
             }
 
             .btn-abrir-mapa {
@@ -354,6 +359,7 @@ Cores atuais:
                 box-shadow: 0 4px 15px rgba(0,0,0,0.08);
                 border: 1px solid rgba(0,0,0,0.05);
                 transition: transform 0.2s ease, box-shadow 0.2s ease;
+                width: 40%;
     
                 .icone-mapa {
                     background-color: #e8f0fe;
