--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -645,6 +645,10 @@ Cores atuais:
         font-size: 1.3rem;
     }
 
+    .head .slide .head-titulos .texto-invertido{
+        padding-left: 5rem;
+    }
+
     .consultas .topic {
         margin: 3rem 0 1rem 0;
     }
